# Interior-Design

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
ai_native_architecture_blue_sky/: 00_CONTEXT_AND_NORTH_STAR.md  01_EXECUTIVE_THESIS_AND_CRITICAL_VERDICT.md  02_PRODUCT_VISION_AND_USER_JOURNEYS.md  03_MARKET_INCUMBENTS_AND_COMPETITOR_MAP.md  04_UK_PROPERTY_DATA_AND_ADDRESS_TO_3D.md  05_REGULATORY_PROFESSIONAL_AND_DATA_GOVERNANCE.md  06_CANONICAL_HOME_MODEL_AND_SYSTEM_ARCHITECTURE.md  07_AI_3D_RECONSTRUCTION_RENDERING_AND_VIDEO.md  08_INFRASTRUCTURE_APIS_AND_INTEGRATIONS.md  09_FULL_STACK_OPERATING_MODEL_AND_ACQUISITION_STRATEGY.md  10_BUILD_VS_BUY_VS_PARTNER_AND_IN_HOUSE_STRATEGY.md  11_FEASIBILITY_LIMITATIONS_RISK_AND_SAFETY_GATES.md  12_EXECUTION_ROADMAP_WORKSTREAMS_AND_STAGE_GATES.md  13_EVALUATION_METRICS_DATA_STRATEGY_AND_EXPERIMENTS.md  14_BUSINESS_MODEL_UNIT_ECONOMICS_AND_MOAT.md  15_CODEX_CLAUDE_IMPLEMENTATION_BRIEF.md  16_API_AND_DOMAIN_SCHEMA_REFERENCE.md  17_RESEARCH_BIBLIOGRAPHY.md  18_BLUE_SKY_FRONTIER_PROGRAM.md  AGENTS.md  ASSUMPTIONS_AND_OPEN_QUESTIONS.md  CLAUDE.md  DECISIONS.md  FULL_RESEARCH_DOSSIER.md  MANIFEST.json  README.md
apps/ios-capture/: .gitignore  README.md  project.yml
apps/web/: next.config.ts  package.json  tsconfig.json  vitest.config.ts
docs/adr/: ADR-003-coordinate-units.md  ADR-004-geometry-kernel.md  (+1 more)
infrastructure/: README.md
(+996 files in other folders)
